Refresh token endpoint
* moved app/login and app/create_user to app/auth
